welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:6: error: value ++ is not a member of Int
    occurences++
              ^occurrences:4: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- nums) {
         ^